Bug 522664 - [9] Unable to launch Eclipse runtime workbench with Java 9
Change-Id: Ifc3cfa876f44f47eab27bcde49aec09f3448e772
Signed-off-by: Vikas Chandra <Vikas.Chandra@in.ibm.com>